platform-services/web-app/base-manifest/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

stats_flush_on_admin: true
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9211
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          # Make Sure that this is a larger value than client/downstream idle timeout.
          # dataplane is configured with 10s idleTimeout so adding 5s as buffer to ensure downstream always cleanup first.
          # If you update this revisit the terminationGracePeriodSeconds in the web spec.
          common_http_protocol_options:
            idle_timeout: 15s
          access_log:
            - name: envoy.file_access_log
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                path: /dev/stdout
                log_format:
                  json_format:
                    start_time: "%START_TIME%"
                    request_method: "%REQ(:METHOD)%"
                    path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                    downstream_local_address: "%DOWNSTREAM_LOCAL_ADDRESS%"
                    downstream_remote_address: "%DOWNSTREAM_REMOTE_ADDRESS%"
                    protocol: "%PROTOCOL%"
                    response_code: "%RESPONSE_CODE%"
                    response_flags: "%RESPONSE_FLAGS%"
                    response_code_details: "%RESPONSE_CODE_DETAILS%"
                    connection_termination_details: "%CONNECTION_TERMINATION_DETAILS%"
                    bytes_received: "%BYTES_RECEIVED%"
                    bytes_sent: "%BYTES_SENT%"
                    duration: "%DURATION%"
                    response_upstream_service_time: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                    x_forwarded_for: "%REQ(X-FORWARDED-FOR)%"
                    user_agent: "%REQ(USER-AGENT)%"
                    request_id: "%REQ(X-REQUEST-ID)%"
                    request_authority: "%REQ(:AUTHORITY)%"
                    upstream_host: "%UPSTREAM_HOST%"
                    upstream_transport_failure_reason: "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
                    upstream_cluster: "%UPSTREAM_CLUSTER%"
                    upstream_protocol: "%UPSTREAM_PROTOCOL%"
                    requested_server_name: "%REQUESTED_SERVER_NAME%"
                    route_name: "%ROUTE_NAME%"
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: {prefix: "/"}
                route:
                  timeout: "110s"
                  cluster: core-web-global
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: core-web-global
    connect_timeout: 0.5s
    load_assignment:
      cluster_name: core-web-global
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8000
